打开盒子系列全部

--- a/blog/.vuepress/styles/index.styl
+++ b/blog/.vuepress/styles/index.styl
@@ -197,11 +197,11 @@ p,pre,.custom-block
         margin-top 2rem
         
 
-// h1
-//   font-size 1.8rem
-//   {$contentClass}:not(.custom) > & // 页面内容的首个h1标签隐藏
-//     &:first-child
-//       display none
+h1
+  font-size 1.8rem
+  {$contentClass}:not(.custom) > & // 页面内容的首个h1标签隐藏
+    &:first-child
+      display none
 
 h2
   font-size 1.5rem
