--- a/blog/.vuepress/styles/index.styl
+++ b/blog/.vuepress/styles/index.styl
@@ -247,7 +247,7 @@ tr
     background-color rgba(150,150,150,0.1)
 
 th, td
-  border 1px solid var(--borderColor)
+  // border 1px solid var(--borderColor)
   padding .6em 1em
   a
     word-break break-all
